<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bgcolor_blue_shade"
    tools:context=".Ex02Activity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_bgcolor_blue_shade"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgTrainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <RadioButton
            android:id="@+id/rdPermanent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/permanent_trainer"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLayPermanent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/tvMarried"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/married"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinnerNumberOfChildren"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinnerNumberOfChildren"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvChildOrChildren"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvMarried"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvChildOrChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/spinnerNumberOfChildren"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/spinnerNumberOfChildren"
                app:layout_constraintTop_toTopOf="@+id/spinnerNumberOfChildren" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RadioButton
            android:id="@+id/rdTemporary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temporary_trainer"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLayTemporary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/tvNumberOfHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_hours"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etNumberOfHours" />

            <EditText
                android:id="@+id/etNumberOfHours"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNumberOfHours"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/salary_color_blue_shade"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:text="-" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btns_bgcolor_blue_shade"
        android:text="@string/btn_calculate"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>